# clickbait_radar

./: README.md  config.yaml  pyproject.toml  requirements.txt
src/clickbait_radar/: analyzer.py  feed.py
src/clickbait_radar/prompts/: clickbait.yaml
